# QCT

./: .gitignore  Cargo.toml  README.md  dprint.json  good_models.txt
src/: config.rs  main.rs  model.rs  model_create.rs  model_manip.rs  model_test.rs  oracles.rs  train.rs  util.rs  valuate.rs
